compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_tuple_projection_oob.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/tuple_projection_oob.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × tuple projection is out of bounds
   ╭─[tests/fixtures/diagnostics/types/tuple_projection_oob.ml:2:7]
 1 │ fn main() {
 2 │   dbg((1, 2).2)
   ·       ────┬───
   ·           ╰── tuple has 2 item(s), but projection requested index 2
 3 │ }
   ╰────
  help: use a tuple projection index that exists
